# Corewar

./: CMakeLists.txt  Makefile  a.out  arena_funcs.c  asm  author  cham_comment.c  check.c  check_champ_code.c  check_magic.c  check_name.c  check_zeros.c  compare  corewar  debug  init_player.c  initial_arena.c  length_exec_code.c  op.c  output_compare.c  put_nums.c  skip_box.c  slider2.s  test  test_byte.c  valid_check.c  vm.c  write_error.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
compare.dSYM/Contents/Resources/DWARF/: compare
corewar.dSYM/Contents/Resources/DWARF/: corewar
includes/: asm.h  corewar.h  op.h  operations.h
includes/libft/: Makefile
includes/libft/headers/: libft.h
libft/: Makefile
libft/headers/: ft_printf.h  get_next_line.h  libft.h
libft/libft/: __.SYMDEF SORTED
libft/src/ft_printf/: dioux_flags.c  dioux_functions.c  dioux_transitions.c  f_long_ariphmetic.c  f_str_fr_int_mass.c  ft_flag_find.c  ft_printf.c  output.c  output_define.c  output_fill.c  parse_format.c  scp_flags.c  variants.c
libft/src/get_next_line/: ft_lstadd.c  get_next_line.c
libft/src/libft/: arraylist_func.c  ft_bzero.c  ft_memdup.c  ft_putendl_fd.c  ft_putstr.c  ft_strjoin.c  ft_strndup.c  ft_strrchr.c  ft_strsplit.c  is_numvalue.c  str_qsort.c  word_len.c
other/: my_out  test_byte.c
src/: arena_funcs.c  arena_output.c  bit_operations.c  cham_comment.c  check.c  check_cards.c  check_champ_code.c  check_magic.c  check_name.c  check_zeros.c  cursor.c  execute_op.c  find_player.c  get_arg_value.c  get_bytes.c  init_player.c  initial_arena.c  length_exec_code.c  op.c  operations.c  prepair_game.c  read_player.c  set_bytes.c  skip_box.c  valid_check.c  vm.c  write_error.c
src/asm/: add_comand.c  add_kta.c  add_label.c  add_list.c  arg_add.c  asm.c  c_data.c  check_comment.c  check_comment2.c  check_comment3.c  check_name.c  check_name2.c  check_name3.c  choose_n_c.c  cnl.c  compare.c  compare_2.c  connecting_people.c  free_exec.c  free_label.c  free_tfile.c  including_magic.c  including_size.c  init_exec.c  init_ssl.c  init_struct.c  inst_add.c  inst_aff.c  inst_and.c  inst_fork.c  inst_ld.c  inst_ldi.c  inst_lfork.c  inst_live.c  inst_lld.c  inst_lldi.c  inst_or.c  inst_st.c  inst_sti.c  inst_sub.c  (+48 more)
src/corewar/: arena_output.c  check.c  check_cards.c  cursor.c  execute_op.c  get_arg_value.c  get_bytes.c  op.c  prepair_game.c  set_bytes.c  vm.c
src/corewar/file_validation/: check_content.c  flag_init.c  read_player.c  valid_check.c  write_error.c
src/corewar/operations/: add.c  aff.c  and.c  fork.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  or.c  st.c  sti.c  sub.c  xor.c  zjmp.c
src/file_validation/: check_content.c  flag_init.c  read_player.c  valid_check.c  write_error.c
src/operations/: add.c  aff.c  and.c  fork.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  or.c  st.c  sti.c  sub.c  xor.c  zjmp.c
test.dSYM/Contents/Resources/DWARF/: test
