cmake_minimum_required(VERSION 3.16)
project(Corewar_debager_master C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/headers)

add_executable(Corewar_debager_master
        includes/corewar.h
        includes/op.h
        libft/headers/ft_printf.h
        libft/headers/get_next_line.h
        libft/headers/libft.h
        libft/src/ft_printf/dioux_flags.c
        libft/src/ft_printf/dioux_functions.c
        libft/src/ft_printf/dioux_transitions.c
        libft/src/ft_printf/f_flag.c
        libft/src/ft_printf/f_long_ariphmetic.c
        libft/src/ft_printf/f_long_multi.c
        libft/src/ft_printf/f_long_summ.c
        libft/src/ft_printf/f_long_value.c
        libft/src/ft_printf/f_regular_value.c
        libft/src/ft_printf/f_str_fr_int_mass.c
        libft/src/ft_printf/ft_flag_find.c
        libft/src/ft_printf/ft_printf.c
        libft/src/ft_printf/output.c
        libft/src/ft_printf/output_define.c
        libft/src/ft_printf/output_fill.c
        libft/src/ft_printf/parse_format.c
        libft/src/ft_printf/scp_flags.c
        libft/src/ft_printf/variants.c
        libft/src/get_next_line/ft_lstadd.c
        libft/src/get_next_line/get_next_line.c
        libft/src/libft/arraylist_func.c
        libft/src/libft/cn_power.c
        libft/src/libft/count_row.c
        libft/src/libft/count_words.c
        libft/src/libft/cpy_double_lvl_mass.c
        libft/src/libft/create_int_mass.c
        libft/src/libft/free_doub_lvl_mass.c
        libft/src/libft/ft_atoi.c
        libft/src/libft/ft_bzero.c
        libft/src/libft/ft_chrfill.c
        libft/src/libft/ft_digitmass_cpy.c
        libft/src/libft/ft_is_num.c
        libft/src/libft/ft_isalnum.c
        libft/src/libft/ft_isalpha.c
        libft/src/libft/ft_isascii.c
        libft/src/libft/ft_isdigit.c
        libft/src/libft/ft_isprint.c
        libft/src/libft/ft_itoa.c
        libft/src/libft/ft_memalloc.c
        libft/src/libft/ft_memccpy.c
        libft/src/libft/ft_memchr.c
        libft/src/libft/ft_memcmp.c
        libft/src/libft/ft_memcpy.c
        libft/src/libft/ft_memdel.c
        libft/src/libft/ft_memdup.c
        libft/src/libft/ft_memmove.c
        libft/src/libft/ft_memset.c
        libft/src/libft/ft_memswap.c
        libft/src/libft/ft_putchar.c
        libft/src/libft/ft_putchar_fd.c
        libft/src/libft/ft_putendl.c
        libft/src/libft/ft_putendl_fd.c
        libft/src/libft/ft_putnbr.c
        libft/src/libft/ft_putnbr_fd.c
        libft/src/libft/ft_putstr.c
        libft/src/libft/ft_putstr_fd.c
        libft/src/libft/ft_strcat.c
        libft/src/libft/ft_strchr.c
        libft/src/libft/ft_strclr.c
        libft/src/libft/ft_strcmp.c
        libft/src/libft/ft_strcpy.c
        libft/src/libft/ft_strdel.c
        libft/src/libft/ft_strdup.c
        libft/src/libft/ft_strequ.c
        libft/src/libft/ft_striter.c
        libft/src/libft/ft_striteri.c
        libft/src/libft/ft_strjoin.c
        libft/src/libft/ft_strlcat.c
        libft/src/libft/ft_strlen.c
        libft/src/libft/ft_strmap.c
        libft/src/libft/ft_strmapi.c
        libft/src/libft/ft_strncat.c
        libft/src/libft/ft_strncmp.c
        libft/src/libft/ft_strncpy.c
        libft/src/libft/ft_strndup.c
        libft/src/libft/ft_strnequ.c
        libft/src/libft/ft_strnew.c
        libft/src/libft/ft_strnstr.c
        libft/src/libft/ft_strrchr.c
        libft/src/libft/ft_strsplit.c
        libft/src/libft/ft_strstr.c
        libft/src/libft/ft_strsub.c
        libft/src/libft/ft_strtrim.c
        libft/src/libft/ft_swap.c
        libft/src/libft/ft_tolower.c
        libft/src/libft/ft_toupper.c
        libft/src/libft/integer_size.c
        libft/src/libft/is_num.c
        libft/src/libft/is_numvalue.c
        libft/src/libft/mod_compair.c
        libft/src/libft/mod_minus.c
        libft/src/libft/mod_plus.c
        libft/src/libft/quick_sort.c
        libft/src/libft/size_int_mass.c
        libft/src/libft/skip_word.c
        libft/src/libft/str_qsort.c
        libft/src/libft/to_power.c
        libft/src/libft/word_len.c
        libft/src/libft/zero_doub_lvl_mass.c
        src/file_validation/check_content.c
        src/file_validation/flag_init.c
        src/file_validation/read_player.c
        src/file_validation/valid_check.c
        src/file_validation/write_error.c
        src/operations/add.c
        src/operations/aff.c
        src/operations/and.c
        src/operations/fork.c
        src/operations/ld.c
        src/operations/ldi.c
        src/operations/lfork.c
        src/operations/live.c
        src/operations/lld.c
        src/operations/lldi.c
        src/operations/or.c
        src/operations/st.c
        src/operations/sti.c
        src/operations/sub.c
        src/operations/xor.c
        src/operations/zjmp.c
        src/check.c
        src/check_cards.c
        src/cursor.c
        src/execute_op.c
        src/get_arg_value.c
        src/get_bytes.c
        src/op.c
        src/prepair_game.c
        src/set_bytes.c
        src/vm.c)
